# smtp-burst

./: .gitignore  AGENTS.md  SPEC.md  __main__.py  agents.md  burstGen.py  burstMain.py  burstVars.py  burst_cli.py  license.md  pyproject.toml  readme.md  requirements-dev.txt  setup.cfg  spec.md
examples/: config.yaml  pipeline.yaml  pipeline_deliverability.yaml  pipeline_esmtp.yaml  pipeline_performance.yaml  pipeline_suite.yaml  pipeline_tls.yaml
scripts/: build_macos.sh  build_ubuntu.sh  build_windows.bat  package.sh  run_tests.bat  run_tests.sh
smtpburst/: __init__.py  __main__.py  attacks.py  cli.py  cli_core.py  config.py  datagen.py  discovery.py  main_helpers.py  nettests.py  pipeline.py  pipeline_actions.py  proxy.py  rdns.py  report.py  send.py  ssl_probe.py  tlstest.py
tests/: test_attacks.py  test_banner.py  test_budget_and_eicar.py  test_chunking_probe.py  test_cli_config.py  test_datagen.py  test_discovery.py  test_dnsbl_parallel.py  test_esmtp.py  test_evasion.py  test_html_percentiles.py  test_html_report_extras.py  test_idle_mode.py  test_inbox.py  test_login.py  test_main.py  test_main_auth_matrix.py  test_main_guidance.py  test_mta_dane.py  test_nettests_timeout.py  test_perf.py  test_pipeline.py  test_pipeline_auth.py  test_pipeline_auth_full.py  test_pipeline_inbox.py  test_pipeline_metrics.py  test_pipeline_parallel.py  test_pipeline_perf_benchmark.py  test_pipeline_send_email.py  test_pipeline_vars.py  test_pipelining_probe.py  test_profiles.py  test_proxy.py  test_rdns.py  test_report.py  test_reporting.py  test_send.py  test_ssl_probe.py  (+4 more)
(+26 files in other folders)
